update menu sidebar

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,9 +1,7 @@
 {
   "name": "pokemonApp",
   "integrations": {
-    "capacitor": {
-      "enabled": false
-    },
+    "capacitor": {},
     "cordova": {}
   },
   "type": "angular"
