--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
+    "@ionic/lab": "^3.2.15",
     "cordova-android": "13.0.0",
     "ionicons": "^7.0.0",
+    "natives": "^1.1.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
